# module_monitor

./: .gitignore  CLAUDE.md  README.md  README.rst  README.rst.j2  generate_readme.py  modules.json  pyproject.toml
.claude/skills/sepal-connect/: SKILL.md
.claude/skills/sepal-monitor/: SKILL.md
.claude/skills/sepal-terminal/: SKILL.md
.github/workflows/: trigger.yaml
monitoring/: watchlist.json
scripts/: CLAUDE_MASTER.md.j2  README.rst.j2  check_deps.py  check_server_apps.py  ci.yaml.j2  gather_repo_data.py  generate_claude_md.py  generate_readme.py  generate_repo_claude_mds.py  models.py  sync_ci.py
tests/: test_check_deps.py
