[project]
name = "module-monitor"
version = "0.1.0"
description = "Tracking and tooling for SEPAL modules across sepal-contrib"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "httpx>=0.27",
    "packaging>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
